fixed the price display